infra/charts/prometheus/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
