infra/charts/prometheus/manifests/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - prometheus.o11y.local
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
